add profile edit/update

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,4 @@
   <%= gravatar_for @user %>
   <%= @user.name %>
 </h1>
+<p class="center"><%= link_to "EDIT", profile_path, class: "btn btn-primary" %></p>
