--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_field :email %>
       
       <%= f.label :tel %>
-      <%= f.text_field :tel %>
+      <%= f.telephone_field :tel %>
       
       <%= f.label :location %>
       <%= f.text_field :location %>
