--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,9 @@
 
       <%= f.label :email %>
       <%= f.text_field :email %>
+      
+      <%= f.label :tel %>
+      <%= f.telephone_field :tel %>
 
       <%= f.label :password %>
       <%= f.password_field :password %>
