--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
+      <h1 class="clearfix">
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-      <div class="panel panel-info clear">
+      <div class="panel panel-info">
         <div class="panel-heading">Profile</div>
         <div class="panel-body">
           <div class="table-responsive">
@@ -39,6 +39,7 @@
     </section>
   </aside>
   <div class="col-md-8">
+    <%= render 'follow_form' if logged_in? %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
