--- a/app/views/layouts/_side.html.erb
+++ b/app/views/layouts/_side.html.erb
@@ -1,6 +1,10 @@
 <section class="user_info">
   <h1 class="clearfix">
+    <% if @user.avatar? %>
+    <%= link_to image_tag(@user.avatar, alt: @user.name, class: "gravatar", size: "50"), @user %>
+    <% else %>
     <%= gravatar_for @user %>
+    <% end %>
     <%= @user.name %>
     <span class="links"><%= link_to "Posts", user_path %>｜<%= link_to "Followings", followings_user_path(@user) %>｜<%= link_to "Followers", followers_user_path(@user) %></span>
   </h1>
