--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,5 +1,9 @@
 <li id="micropost-<%= micropost.id %>">
+  <% if micropost.user.avatar? %>
+  <%= link_to image_tag(micropost.user.avatar, alt: micropost.user.name, class: "gravatar", size: "50"), micropost.user %>
+  <% else %>
   <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
+  <% end %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
