--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,6 +25,9 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
+      
+      <%= f.label :avatar %><br>
+      <%= f.file_field :avatar, class: 'form-control' %>
 
       <%= f.submit "Update!", class: "btn btn-large btn-primary" %>
     <% end %>
