--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -188,6 +188,14 @@ aside {
       padding: 5px 0;
     }
   }
+  .image {
+    padding:10px 0;
+    img{
+      max-width:100%;
+      width:auto;
+      height:auto;
+    }
+  }
   .timestamp {
     color: $gray-light;
     display: block;
@@ -237,4 +245,28 @@ span.picture {
     float:none;
     margin:0 auto 10px;
   }
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+.mb10
+{
+  margin-bottom:10px;
 }
