--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -6,6 +6,11 @@
   <% end %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content"><%= micropost.content %></span>
+  <% if micropost.image? %>
+  <span class="image">
+    <%= image_tag(micropost.image, alt: micropost.user.name+"さんの画像", class: "image") %>
+  </span>
+  <% end %>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user == micropost.user %>
