--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,12 @@
 <%= form_for(@micropost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+    <%= f.text_area :content, placeholder: "Compose new micropost...", class: 'form-control' %>
+  </div>
+  <div class="field text-right mb10">
+    <span class="btn btn-default btn-file">
+     <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Upload image<%= f.file_field :image, class: 'form-control' %>
+    </span>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
