--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -12,10 +12,10 @@
   </span>
   <% end %>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+    <%= time_ago_in_words(micropost.created_at) %> 前に投稿しました
     <% if current_user == micropost.user %>
-      <%= link_to "delete", micropost, method: :delete,
-                                       data: { confirm: "You sure?" } %>
+      <%= link_to "削除", micropost, method: :delete,
+                                       data: { confirm: "投稿を削除してもよろしいですか？" } %>
     <% end %>
   </span>
 </li>
