--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,16 @@
       </section>
     </aside>
     <div class="col-md-8">
-      <h3>Micropost Feed</h3>
+      <h3>タイムライン</h3>
       <%= render 'shared/feed' %>
       <%= paginate @feed_items %>
     </div>
   </div>
 <% else %>
   <div class="center jumbotron">
-    <h1>Welcome to the Microposts</h1>
+    <h1>マイクロポストへ<br>
+    ようこそ！</h1>
 
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "今すぐ新規登録しませんか？", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
