repost.. undefind but localize update

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -5,4 +5,4 @@
 <% end %>
 <h1><%= current_user.name %></h1>
 <span><%= link_to "プロフィールを見る", current_user %></span>
-<span><%= pluralize(current_user.microposts.count, "記事投稿しています") %></span>
+<span><%= current_user.microposts.count %>記事投稿しています</span>
