--- a/app/views/shared/_repost_form.html.erb
+++ b/app/views/shared/_repost_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@micropost) do |f| %>
+<%= form_for(@repost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "新しく投稿しましょう", class: 'form-control' %>
+    <%= f.text_area :content, placeholder: "リポストしましょう", class: 'form-control' %>
   </div>
   <div class="field text-right mb10">
     <span class="btn btn-default btn-file">
