--- a/app/views/layouts/_side.html.erb
+++ b/app/views/layouts/_side.html.erb
@@ -1,7 +1,7 @@
 <section class="user_info">
   <h1 class="clearfix">
     <% if @user.avatar? %>
-    <%= link_to image_tag(@user.avatar, alt: @user.name, class: "gravatar", size: "50"), @user %>
+    <%= link_to image_tag(@user.avatar_url(:thumbnail), alt: @user.name, class: "gravatar", size: "50"), @user %>
     <% else %>
     <%= gravatar_for @user %>
     <% end %>
