--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,15 +1,18 @@
 <li id="micropost-<%= micropost.id %>">
   <% if micropost.user.avatar? %>
-  <%= link_to image_tag(micropost.user.avatar, alt: micropost.user.name, class: "gravatar", size: "50"), micropost.user %>
+  <%= link_to image_tag(micropost.user.avatar_url(:thumbnail), alt: micropost.user.name, class: "gravatar", size: "50"), micropost.user %>
   <% else %>
   <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
   <% end %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content"><%= micropost.content %></span>
   <% if micropost.image? %>
-  <span class="image">
-    <%= image_tag(micropost.image, alt: micropost.user.name+"さんの画像", class: "image") %>
-  </span>
+    <span class="image">
+      <%= image_tag(micropost.image_url, alt: micropost.user.name+"さんの画像", class: "image") %>
+    </span>
+    <% if micropost.user_id == current_user %>
+      <%= f.check_box :remove_image, class: 'form-control' %> 画像を削除する
+    <% end %>
   <% end %>
   <span class="timestamp">
     <%= time_ago_in_words(micropost.created_at) %> 前に投稿しました
