--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.avatar? %>
-<%= link_to image_tag(current_user.avatar, alt: current_user.name, class: "gravatar", size: "50"), current_user %>
+<%= link_to image_tag(current_user.avatar_url(:thumbnail), alt: current_user.name, class: "gravatar", size: "50"), current_user %>
 <% else %>
 <%= link_to gravatar_for(current_user, size: 50), current_user %>
 <% end %>
