--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,13 +23,14 @@
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "パスワード確認" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
       <%= f.label :avatar %><br>
       <%= f.file_field :avatar, class: 'form-control' %>
+      <%= f.hidden_field :avatar_cache %>
 
-      <%= f.submit "Update!", class: "btn btn-large btn-primary" %>
+      <%= f.submit "更新する", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
